[gd_scene load_steps=5 format=2]

[ext_resource path="res://Matriz/Captura de tela 2023-03-09 150324.png" type="Texture" id=1]
[ext_resource path="res://Matriz/Matriz.gd" type="Script" id=2]
[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Eisenhower360" type="Sprite" parent="."]
position = Vector2( 435, 130 )
scale = Vector2( 0.800229, 0.786517 )
texture = ExtResource( 1 )
offset = Vector2( -159.944, 211.082 )

[node name="btnAnalise" type="Button" parent="."]
margin_left = 215.0
margin_top = 480.0
margin_right = 398.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( -705, -559 )
text = "Enviar matriz para análise"

[node name="BtnImpUrgMenos" type="Button" parent="."]
margin_left = 130.0
margin_top = 95.0
margin_right = 150.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 175, 22 )
text = "-"

[node name="BtnImpUrgMais" type="Button" parent="."]
margin_left = 255.0
margin_top = 95.0
margin_right = 275.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 51, 22 )
text = "+"

[node name="BtnImpNurgMenos" type="Button" parent="."]
margin_left = 375.0
margin_top = 95.0
margin_right = 395.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( -127, 20 )
text = "-"

[node name="BtnImpNurgMais" type="Button" parent="."]
margin_left = 500.0
margin_top = 95.0
margin_right = 520.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( -251, 20 )
text = "+"

[node name="BtnNImpUrgMenos" type="Button" parent="."]
margin_left = 130.0
margin_top = 320.0
margin_right = 150.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 197, -41 )
text = "-"

[node name="BtnNImpUrgMais" type="Button" parent="."]
margin_left = 255.0
margin_top = 320.0
margin_right = 275.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 73, -41 )
text = "+"

[node name="BtnNImpNUrgMenos" type="Button" parent="."]
margin_left = 375.0
margin_top = 320.0
margin_right = 395.0
margin_bottom = 340.0
text = "-"

[node name="BtnNImpNUrgMais" type="Button" parent="."]
margin_left = 500.0
margin_top = 320.0
margin_right = 520.0
margin_bottom = 340.0
text = "+"

[node name="LblImportanteUrgente" type="Label" parent="."]
margin_left = 95.0
margin_top = 125.0
margin_right = 287.0
margin_bottom = 276.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblImportanteNUrgente" type="Label" parent="."]
margin_left = 336.0
margin_top = 128.0
margin_right = 552.0
margin_bottom = 280.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblNImportanteUrgente" type="Label" parent="."]
margin_left = 96.0
margin_top = 350.0
margin_right = 288.0
margin_bottom = 469.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblNImportanteNUrgente" type="Label" parent="."]
margin_left = 336.0
margin_top = 350.0
margin_right = 552.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="ProgressBarImpUrg" type="ProgressBar" parent="."]
margin_left = 160.0
margin_top = 95.0
margin_right = 246.0
margin_bottom = 116.0
max_value = 24.0

[node name="ProgressBarImpNUrg" type="ProgressBar" parent="."]
margin_left = 405.0
margin_top = 95.0
margin_right = 491.0
margin_bottom = 116.0
max_value = 24.0

[node name="ProgressBarNImpUrg" type="ProgressBar" parent="."]
margin_left = 160.0
margin_top = 320.0
margin_right = 246.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( 91, -118 )
max_value = 24.0

[node name="ProgressBarNImpNUrg" type="ProgressBar" parent="."]
margin_left = 405.0
margin_top = 320.0
margin_right = 491.0
margin_bottom = 341.0
max_value = 24.0

[node name="Label" type="Label" parent="."]
margin_left = 628.0
margin_top = 107.0
margin_right = 982.0
margin_bottom = 571.0
custom_fonts/font = SubResource( 1 )
text = "Atividades importantes têm a ver com o resultado, contribui para nossa missão, nossos valores e metas prioritárias.  As tarefas que estão nesse quadrante atendem a isso?
"
autowrap = true

[node name="btnJogar" type="Button" parent="."]
margin_left = 216.0
margin_top = 477.0
margin_right = 399.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -705, -559 )
text = "Jogar!"

[connection signal="pressed" from="btnAnalise" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BtnImpUrgMenos" to="." method="_on_BtnImpUrgMenos_pressed"]
[connection signal="pressed" from="BtnImpUrgMais" to="." method="_on_BtnImpUrgMais_pressed"]
[connection signal="pressed" from="BtnImpNurgMenos" to="." method="_on_BtnImpNurgMenos_pressed"]
[connection signal="pressed" from="BtnImpNurgMais" to="." method="_on_BtnImpNurgMais_pressed"]
[connection signal="pressed" from="BtnNImpUrgMenos" to="." method="_on_BtnNImpUrgMenos_pressed"]
[connection signal="pressed" from="BtnNImpUrgMais" to="." method="_on_BtnNImpUrgMais_pressed"]
[connection signal="pressed" from="BtnNImpNUrgMenos" to="." method="_on_BtnNImpNUrgMenos_pressed"]
[connection signal="pressed" from="BtnNImpNUrgMais" to="." method="_on_BtnNImpNUrgMais_pressed"]
[connection signal="pressed" from="btnJogar" to="." method="_on_btnJogar_pressed"]
